@@ -1040,7 +1040,7 @@ public class DataNode extends Configured
     }
   }
     
-  DataNodeMetrics getMetrics() {
+  public DataNodeMetrics getMetrics() {
     return metrics;
   }
   
